--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==1.4.0
 anyio==4.0.0
+appdirs==1.4.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 array-record==0.4.1
@@ -7,7 +8,7 @@ arrow==1.3.0
 asttokens==2.4.0
 astunparse==1.6.3
 async-lru==2.0.4
-attrs==21.4.0
+attrs==23.1.0
 Babel==2.13.1
 backcall==0.2.0
 beautifulsoup4==4.12.2
@@ -26,7 +27,9 @@ debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
 dm-tree==0.1.8
+docker-pycreds==0.4.0
 dp-accounting==0.4.2
+environs==9.5.0
 etils==1.5.2
 exceptiongroup==1.1.3
 executing==2.0.0
@@ -36,6 +39,8 @@ fonttools==4.43.1
 fqdn==1.5.1
 fsspec==2023.10.0
 gast==0.4.0
+gitdb==4.0.11
+GitPython==3.1.40
 google-auth==2.23.3
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
@@ -49,6 +54,7 @@ importlib-resources==6.1.0
 ipykernel==6.26.0
 ipython==8.16.1
 ipython-genutils==0.2.0
+ipywidgets==8.1.1
 isoduration==20.11.0
 jax==0.4.19
 jedi==0.19.1
@@ -56,8 +62,10 @@ Jinja2==3.1.2
 joblib==1.3.2
 json5==0.9.14
 jsonpointer==2.4
-jsonschema==3.2.0
+jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
 jupyter-events==0.8.0
 jupyter-lsp==2.2.0
 jupyter_client==8.5.0
@@ -66,6 +74,7 @@ jupyter_server==2.9.0
 jupyter_server_terminals==0.4.4
 jupyterlab==4.0.7
 jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.9
 jupyterlab_server==2.25.0
 keras==2.14.0
 Keras-Preprocessing==1.1.2
@@ -73,6 +82,7 @@ kiwisolver==1.4.5
 libclang==16.0.6
 Markdown==3.5
 MarkupSafe==2.1.3
+marshmallow==3.20.1
 matplotlib==3.8.0
 matplotlib-inline==0.1.6
 missingno==0.5.2
@@ -95,6 +105,7 @@ pandas==1.5.3
 pandocfilters==1.5.0
 parameterized==0.9.0
 parso==0.8.3
+pathtools==0.1.2
 patsy==0.5.3
 pickleshare==0.7.5
 Pillow==10.1.0
@@ -112,12 +123,15 @@ Pygments==2.16.1
 pyparsing==3.1.1
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-json-logger==2.0.7
 pytz==2023.3.post1
 pywin32==306
 pywinpty==2.0.12
 PyYAML==6.0.1
 pyzmq==25.1.1
+qtconsole==5.4.4
+QtPy==2.4.1
 referencing==0.30.2
 requests==2.31.0
 requests-oauthlib==1.3.1
@@ -130,7 +144,10 @@ scikit-learn==1.3.2
 scipy==1.11.3
 seaborn==0.13.0
 Send2Trash==1.8.2
+sentry-sdk==1.33.1
+setproctitle==1.3.3
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
@@ -147,7 +164,6 @@ tensorflow-io-gcs-filesystem==0.31.0
 tensorflow-metadata==1.13.0
 tensorflow-privacy==0.8.10
 tensorflow-probability==0.22.1
-tensorflow-text==2.10.0
 termcolor==2.3.0
 terminado==0.17.1
 threadpoolctl==3.2.0
@@ -162,10 +178,12 @@ typing_extensions==4.8.0
 tzdata==2023.3
 uri-template==1.3.0
 urllib3==2.0.7
+wandb==0.15.12
 wcwidth==0.2.8
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.4
 Werkzeug==3.0.1
+widgetsnbextension==4.0.9
 wrapt==1.14.1
 zipp==3.17.0
