--- a/requirements.txt
+++ b/requirements.txt
@@ -110,6 +110,7 @@ patsy==0.5.3
 pickleshare==0.7.5
 Pillow==10.1.0
 platformdirs==3.11.0
+plotly==5.18.0
 prometheus-client==0.17.1
 promise==2.3
 prompt-toolkit==3.0.39
@@ -152,6 +153,8 @@ sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
 statsmodels==0.14.0
+tabulate==0.9.0
+tenacity==8.2.3
 tensorboard==2.14.1
 tensorboard-data-server==0.7.2
 tensorboard-plugin-wit==1.8.1
@@ -174,7 +177,7 @@ tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.12.0
 types-python-dateutil==2.8.19.14
-typing_extensions==4.8.0
+typing_extensions==4.5.0
 tzdata==2023.3
 uri-template==1.3.0
 urllib3==2.0.7
