--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,107 @@ scripts/wandb/
 Dataset/
 wandb/
 scripts/__pychache__
+/Plots/2023-11-08_15-41-42/
+/Metrics/E0CFF000
+/Plots/2023-11-15_16-45-16/
+/Plots/2023-12-12_19-54-42/
+/Plots/2023-11-08_17-38-21/
+/Plots/2023-12-12_17-42-20/
+/Plots/2023-11-27_12-56-37/
+/Plots/2023-11-15_14-40-02/
+/Plots/2023-11-08_17-37-13/
+/Plots/2023-11-09_10-25-10/
+/Metrics/metrics(Batch_size=25).xlsx
+/Plots/2023-11-09_09-24-59/
+/Plots/2023-11-20_12-10-24/
+/Plots/2023-11-27_15-18-34/
+/Plots/2023-11-27_09-56-03/
+/Plots/Models/
+/Plots/2023-11-13_16-19-39/
+/Metrics/SGD-DP_SGD-NO-DPPlots(Batch_size=25)/
+/Plots/2023-11-26_19-44-30/
+/Plots/2023-11-27_15-24-53/
+/Plots/2023-11-08_22-53-27/
+/Plots/2023-11-06_11-10-17/
+/Plots/2023-11-27_18-54-45/
+/Plots/2023-11-20_11-35-10/
+/Plots/2023-11-13_19-16-23/
+/Plots/MIA/
+/scripts/wandb/
+/Metrics/metrics_old.xlsx
+/Plots/2023-11-08_18-43-00/
+/Plots/2023-11-22_18-59-19/
+/Plots/2023-11-09_10-18-39/
+/Plots/2023-11-08_16-14-23/
+/Metrics/SGD_SGD-SPARSE-DPPlots(Batch_size=25)/
+/Plots/2023-11-20_14-21-19/
+/Plots/2023-11-27_16-23-38/
+/Plots/2023-11-22_16-11-07/
+/Plots/2023-11-20_11-14-02/
+/Plots/2023-11-20_10-16-09/
+/Plots/2023-11-20_12-48-50/
+/Plots/2023-11-08_16-45-58/
+/Plots/2023-11-09_08-40-05/
+/Plots/2023-11-20_13-54-06/
+/Plots/2023-11-08_22-49-30/
+/Plots/2023-11-20_12-38-38/
+/Plots/2023-11-09_09-02-07/
+/Plots/2023-11-09_07-47-54/
+/Plots/2023-11-26_19-29-31/
+/Plots/2023-11-20_14-15-02/
+/Metrics/SGD_SGD-SPARSE-DPPlots/
+/Plots/2023-11-27_10-07-43/
+/Plots/2023-11-19_10-25-06/
+/Plots/2023-11-20_12-55-24/
+/Plots/2023-11-08_23-12-19/
+/Metrics/SGD-DP_SGD-NO-DPPlots/
+/Plots/2023-11-09_00-03-25/
+/Plots/2023-11-15_16-47-25/
+/Plots/2023-11-08_17-40-26/
+/Plots/2023-11-08_21-31-42/
+/Plots/2023-11-08_15-46-04/
+/Plots/2023-12-12_15-26-27/
+/Plots/2023-11-08_17-54-10/
+/Plots/2023-11-08_22-26-11/
+/Plots/2023-11-09_08-14-48/
+/Plots/2023-12-13_20-05-09/
+/Plots/2023-11-15_17-14-36/
+/Plots/2023-12-12_12-16-46/
+/Metrics/Metrics_Averages/
+/Plots/2023-11-22_13-07-49/
+/Plots/2023-11-08_22-20-09/
+/Plots/2023-11-09_07-45-07/
+/Plots/2023-12-12_10-21-26/
+/Plots/2024-02-20_12-07-28/
+/Plots/2023-11-20_13-59-33/
+/Plots/2023-11-06_11-37-35/
+/Plots/2023-11-22_16-04-05/
+/Metrics/SGD_SGD-DPPlots(Batch_size=25)/
+/Plots/2023-11-09_08-26-47/
+/Plots/2023-11-13_19-13-52/
+/Plots/2023-11-13_20-00-59/
+/Plots/2023-11-09_09-05-20/
+/Plots/2024-02-20_11-53-46/
+/Plots/2023-12-05_13-45-30/
+/Plots/2023-11-15_16-53-07/
+/Plots/2023-11-20_12-14-48/
+/Plots/2023-11-09_00-23-20/
+/Plots/2023-11-20_14-10-49/
+/Plots/2023-11-13_16-15-36/
+/Plots/2023-11-13_16-12-19/
+/Plots/2023-11-13_16-05-14/
+/Plots/2023-11-09_08-13-21/
+/Plots/2023-11-20_13-46-29/
+/Plots/2023-11-20_12-25-53/
+/Plots/2023-11-09_10-32-53/
+/Plots/2023-11-08_15-36-07/
+/Plots/2023-11-19_11-12-08/
+/Plots/2023-11-09_08-23-01/
+/Plots/2023-11-20_13-19-42/
+/Plots/2023-11-19_11-12-54/
+/Plots/2023-12-12_14-06-37/
+/Plots/2023-11-20_14-30-20/
+/Metrics/Metrics_Averages(Batch_size=25)/
+/Metrics/SGD_SGD-DPPlots/
+/Plots/2023-12-12_10-38-21/
+/Plots/2023-11-20_14-42-20/
